--- a/dionissempoisbdmmxsdc/web/css/index.css
+++ b/dionissempoisbdmmxsdc/web/css/index.css
@@ -2,6 +2,21 @@ body{
 	z-index:10;
 	background: #F5F8FF;
 }
+
+#divMenu{
+    width: 15%;
+    height: 90%;
+    background-color: #706666; 
+    
+}
+
+#divContent{
+    width: 85%;
+    height: 100%;
+    background-color:#F5F8FF;
+    float: right;
+    margin-top: -405px;
+}
 .shadow{
 	position:fixed;
 	height:100%;
