--- a/dionissempoisbdmmxsdc/web/css/index.css
+++ b/dionissempoisbdmmxsdc/web/css/index.css
@@ -6,16 +6,85 @@ body{
 #divMenu{
     width: 15%;
     height: 90%;
-    background-color: #706666; 
-    
+    background-color: #BFBEBE; 
+    position: absolute;
 }
+
+h3{
+    font-family: tahoma;
+    margin-left: 10px;
+}
+
+#labCategorias{
+    font-family: tahoma;
+    margin-left: 5px;
+    font-size: 15px;
+}
+
+
+.clearfix{
+    padding:5px 5px 5px;
+    list-style-type: none;
+}
+
+.clearfix li{
+    padding-bottom: 5px;
+}
+
+/*----- Menu Outline -----*/
+.menu-wrap {
+    width:100%;
+    background:#BFBEBE;
+}
+
+.menu a {
+    transition:all linear 0.15s;
+    color: #292184;
+    text-decoration: none;
+    padding-bottom: 10px;
+}
+
+.menu .arrow {
+    font-size:9px;
+    line-height:0%;
+}
+
+.menu > ul > li {
+    position:relative;
+    font-size:15px;
+}
+
+/*----- Bottom Level -----*/
+.menu li:hover .sub-menu {
+    z-index:1;
+    opacity:1;
+}
+
+.sub-menu {
+    width:160%;
+    padding:5px 0px;
+    position:absolute;
+    top:100%;
+    left:0px;
+    z-index:-1;
+    opacity:0;
+    transition:opacity linear 0.15s;
+    box-shadow:0px 2px 3px rgba(0,0,0,0.2);
+    background: #B5B5B5;
+}
+
+.sub-menu li {
+    font-size:16px;
+    list-style-type: none;
+}
+
+
 
 #divContent{
     width: 85%;
     height: 100%;
     background-color:#F5F8FF;
     float: right;
-    margin-top: -405px;
 }
 .shadow{
 	position:fixed;
@@ -50,6 +119,13 @@ float: right;
 	background-color: #0E2A71;
 	height:60px;
 	width: 100%;
+}
+
+#imgHome{
+    width: 38px;
+    height: 40px;
+    margin-left: 1%;
+    margin-top: 0.5%;
 }
 
 .nav li{	
