--- a/dionissempoisbdmmxsdc/web/css/registroUsuario.css
+++ b/dionissempoisbdmmxsdc/web/css/registroUsuario.css
@@ -4,10 +4,10 @@ body{
 
 
 h3{
-	font-family: Arial, Helvetica ;
-	color: blue;
-	margin-left: 40%;
-	margin-top: 1%;
+    font-family: Arial, Helvetica;
+    color: blue;
+    margin-right: 45%;
+    float: right;
 }
 
 #divRegistro{
