--- a/dionissempoisbdmmxsdc/web/css/index.css
+++ b/dionissempoisbdmmxsdc/web/css/index.css
@@ -110,10 +110,6 @@ a{
 	padding:1.5%;
 }
 
-.nav{
-width: 40%;
-float: right;
-}
 
 #divHeader{
 	background-color: #0E2A71;
@@ -128,6 +124,94 @@ float: right;
     margin-top: 0.5%;
 }
 
+.sBuscar{
+    position: absolute; 
+    margin-top:12px;
+    width: 24%;
+    height: 45px;
+    right:42%;
+    background: white;
+    border-radius: 1px;
+}
+
+#txtBuscar{
+    width:80%;
+    height: 38px; 
+    border-radius: 3px;
+}
+
+#botonBus{
+    width: 18%;
+    height: 42px;
+    border-radius: 1px;
+    margin-top: 1%;
+    background-color: white;
+    background-image:url(../imagenes/searchIcon.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-attachment: inherit;
+    background-position: center;
+    position: absolute;
+
+}
+
+.menu-wrapF {
+    width:33%;
+    margin-left: 58%;
+    margin-top: -3%;
+}
+
+.clearfixF{
+    padding:5px 5px 5px;
+    list-style-type: none;
+}
+
+.clearfixF li{
+    padding-bottom: 5px;
+}
+
+.menuF a {
+    transition:all linear 0.15s;
+    color: white;
+    text-decoration: none;
+    padding-bottom: 10px;
+}
+
+.menuF .arrow {
+    font-size:9px;
+    line-height:0%;
+}
+
+.menuF > ul > li {
+    position:relative;
+    font-size:15px;
+}
+
+/*----- Bottom Level -----*/
+.menuF li:hover .sub-menuF {
+    z-index:1;
+    opacity:1;
+}
+
+.sub-menuF {
+    width:100%;
+    padding:5px 0px;
+    position:absolute;
+    top:100%;
+    left:0px;
+    z-index:-1;
+    opacity:0;
+    transition:opacity linear 0.15s;
+    box-shadow:0px 2px 3px rgba(0,0,0,0.2);
+    background: #B5B5B5;
+}
+
+.sub-menuF li {
+    font-size:12px;
+    list-style-type: none;
+    font-family: tahoma;
+}
+
 .nav li{	
 	cursor: pointer;
 	font-family: verdana;
@@ -137,6 +221,12 @@ float: right;
 	padding-right: 30px;
 	float: right;
 	
+}
+
+.nav{
+    width: 40%;
+    float: right;
+    margin-top: -4%;
 }
 
 .logLab{
@@ -156,7 +246,6 @@ float: right;
 
 #botonCerrar{
 	background: url(../imagenes/botonCerrar.jpg);
-	left: center;
 	height: 20px;
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
