--- a/dionissempoisbdmmxsdc/web/css/index.css
+++ b/dionissempoisbdmmxsdc/web/css/index.css
@@ -78,13 +78,12 @@ h3{
     list-style-type: none;
 }
 
-
-
 #divContent{
     width: 85%;
-    height: 100%;
+    height: 80%;
     background-color:#F5F8FF;
     float: right;
+    margin-top: 10%;
 }
 .shadow{
 	position:fixed;
@@ -112,8 +111,9 @@ a{
 
 
 #divHeader{
+        position: relative;
 	background-color: #0E2A71;
-	height:60px;
+	height:80px;
 	width: 100%;
 }
 
@@ -156,25 +156,35 @@ a{
 }
 
 .menu-wrapF {
-    width:33%;
+    width:30%;
+    height: 100%;
     margin-left: 58%;
-    margin-top: -3%;
+    margin-top: -2%;
+    position: relative;
 }
 
 .clearfixF{
-    padding:5px 5px 5px;
+    position: absolute;
+    padding-left:5px;
+    width: 100%;
+    height: 100%;
     list-style-type: none;
+    
 }
 
 .clearfixF li{
     padding-bottom: 5px;
 }
 
+.menuF{
+    height: 100%;
+}
+
 .menuF a {
     transition:all linear 0.15s;
     color: white;
     text-decoration: none;
-    padding-bottom: 10px;
+   
 }
 
 .menuF .arrow {
@@ -185,6 +195,7 @@ a{
 .menuF > ul > li {
     position:relative;
     font-size:15px;
+    
 }
 
 /*----- Bottom Level -----*/
@@ -224,9 +235,10 @@ a{
 }
 
 .nav{
-    width: 40%;
-    float: right;
-    margin-top: -4%;
+    width: 20%;
+    position: absolute;
+    margin-left: 75%;
+    margin-top: -5%;
 }
 
 .logLab{
