--- a/dionissempoisbdmmxsdc/web/css/index.css
+++ b/dionissempoisbdmmxsdc/web/css/index.css
@@ -31,9 +31,6 @@ h3{
     padding-bottom: 5px;
 }
 
-
-
-
 .menuInicioSesion:hover {
    opacity: 1;
 }
@@ -148,27 +145,28 @@ a{
     margin-top: 0.5%;
 }
 
-.sBuscar{
-    position: absolute; 
-    margin-top:12px;
+.dBuscar{
+    position: relative; 
     width: 24%;
     height: 45px;
-    right:42%;
     background: white;
     border-radius: 1px;
+    margin-left: 34%;
+    margin-top: -2%;
 }
 
 #txtBuscar{
+    position: absolute;
     width:80%;
-    height: 38px; 
+    height: 85%; 
     border-radius: 3px;
+    background-color: white;
 }
 
 #botonBus{
     width: 18%;
-    height: 42px;
+    height: 100%;
     border-radius: 1px;
-    margin-top: 1%;
     background-color: white;
     background-image:url(../imagenes/searchIcon.png);
     background-size: 100% 100%;
@@ -176,15 +174,16 @@ a{
     background-attachment: inherit;
     background-position: center;
     position: absolute;
-
+    top:0;
+    right:0;
 }
 
 .menu-wrapF {
     width:30%;
     height: 100%;
     margin-left: 58%;
-    margin-top: -2%;
-    position: relative;
+    margin-top: -3%;
+    position: absolute;
 }
 
 .clearfixF{
@@ -262,7 +261,7 @@ a{
     width: 20%;
     position: absolute;
     margin-left: 75%;
-    margin-top: -5%;
+    margin-top: -3%;
 }
 
 .logLab{
@@ -290,3 +289,59 @@ a{
 	float: right;
 	border-radius: 10px;
 }
+
+.masReciente{
+    width: 95%;
+    height: 50%;
+    margin-left: 3%;
+    display: inline-block;
+}
+
+.masVendido{
+    width: 95%;
+    height: 50%;
+    margin-left: 3%;
+    display: inline-block;
+}
+
+.masComentado{
+    width: 95%;
+    height: 50%;
+    margin-left: 3%;
+    display: inline-block;
+}
+
+.masCaro{
+    width: 95%;
+    height: 50%;
+    margin-left: 3%;
+    display: inline-block;
+}
+
+.contenido{
+    width: 23%;
+    padding: 4px;
+    float: left;
+}
+
+.divImgProducto{
+   width: 100%;
+   height: 60%;
+}
+
+.infoProducto{
+    width: 95%;
+    height: 38%;
+    margin-left: 3%;
+    background-color: #E2DBEE;
+    border-radius: 5px;
+    font-family: arial;
+    font-size: 12px;
+}
+
+.imgProducto{
+    width: 100%;
+    height: 100%;
+    border-radius: 2px;
+}
+
