--- a/dionissempoisbdmmxsdc/web/css/index.css
+++ b/dionissempoisbdmmxsdc/web/css/index.css
@@ -31,6 +31,12 @@ h3{
     padding-bottom: 5px;
 }
 
+.menuInicioSesion{
+    position: absolute;
+    margin-left: -33%;
+    margin-top: -5%;
+}
+
 .menuInicioSesion:hover {
    opacity: 1;
 }
@@ -288,4 +294,9 @@ a{
 	background-position: center; 
 	float: right;
 	border-radius: 10px;
+}
+
+#imgUsuario{
+    width: 50%;
+    height: 60px;
 }
