--- a/dionissempoisbdmmxsdc/web/css/index.css
+++ b/dionissempoisbdmmxsdc/web/css/index.css
@@ -185,7 +185,7 @@ a{
 }
 
 .menu-wrapF {
-    width:30%;
+    width:20%;
     height: 100%;
     margin-left: 58%;
     margin-top: -3%;
@@ -244,12 +244,28 @@ a{
     transition:opacity linear 0.15s;
     box-shadow:0px 2px 3px rgba(0,0,0,0.2);
     background: #B5B5B5;
+    border-radius: 3px;
 }
 
 .sub-menuF li {
     font-size:12px;
     list-style-type: none;
     font-family: tahoma;
+}
+
+#fechaOrigen{
+    width: 70px;
+    border-radius: 2px;
+}
+
+#fechaDestino{
+    width: 70px;
+    border-radius: 2px;
+}
+
+.busqueda{
+    width: 100px;
+    border-radius: 2px;
 }
 
 .nav li{	
