Agregar preguntas y mostrar preguntas/respuestas

--- a/dionissempoisbdmmxsdc/web/css/producto.css
+++ b/dionissempoisbdmmxsdc/web/css/producto.css
@@ -20,12 +20,14 @@ p{
     background-color: blue;
 }
 
+
+
 #txtVigencia{
     width: 70px;
 }
 
-#publicar{
-    width: 100px;
+#publicarAviso{
+    width: 60px;
 }
 
 .tablaDC{
